@@ -59,6 +59,8 @@ gint pam_session_get_num_messages (PAMSession *session);
 
 void pam_session_respond (PAMSession *session, struct pam_response *response);
 
+gchar **pam_session_get_envlist(PAMSession *session);
+
 // FIXME: Do in unref
 void pam_session_end (PAMSession *session);
 
